<resources>
    <string name="app_name">Khmer Alternative Keyboard</string>
    <string name="khmer_ime">Khmer Alt</string>
    <string name="subtype_kh_KH">Khmer (KH)</string>
    <string name="double_quote_sign">\"</string>
    <string name="space_text">ខ្មែរ</string>
    <string name="color_setting_icon">Setting Icon</string>
    <string name="size_setting_icon">Size Setting Icon</string>
    <string name="colorSetting"><u>កំណត់ពណ៌</u></string>
    <string name="sizeSetting"><u>កំណត់ទំហំ</u></string>
    <string name="dictionary"><u>ពាក្យនៅវចនានុក្រម</u></string>
    <string name="credits">Credits</string>
</resources>
