<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/colorSettingContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:text="@string/colorSetting"
        android:onClick="onColorTextClicked"

        android:textColor="@drawable/setting_drawable"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/colorSettingIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/color_setting_icon"
        android:src="@drawable/ic_format_paint_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/colorSettingContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorSettingContent" />

    <ImageView
        android:id="@+id/dictionarySettingIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/color_setting_icon"
        android:src="@drawable/ic_dictionary_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/wordInDictionary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wordInDictionary" />

    <ImageView
        android:id="@+id/sizeSettingIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/size_setting_icon"
        android:src="@drawable/ic_format_size_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/sizeSettingContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sizeSettingContent" />

    <TextView
        android:id="@+id/sizeSettingContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sizeSetting"
        android:textColor="@drawable/setting_drawable"
        android:textSize="32sp"
        android:onClick="onSizeTextClicked"

        app:layout_constraintStart_toStartOf="@+id/colorSettingContent"
        app:layout_constraintTop_toBottomOf="@+id/colorSettingContent" />

    <TextView
        android:id="@+id/wordInDictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dictionary"
        android:textColor="@drawable/setting_drawable"
        android:textSize="32sp"
        android:onClick="onDictionaryTextClicked"

        app:layout_constraintStart_toStartOf="@+id/sizeSettingContent"
        app:layout_constraintTop_toBottomOf="@+id/sizeSettingContent" />

    <TextView
        android:id="@+id/creditContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/credits"
        android:textColor="@drawable/setting_drawable"
        android:textSize="32sp"
        android:textStyle="bold"
        android:onClick="onCreditClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInDictionary" />

    <!--<EditText-->
    <!--android:id="@+id/placeholder"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/dictionarySettingIcon" />-->
</androidx.constraintlayout.widget.ConstraintLayout>